--- a/app/views/abfragen/_ort_auswahl_panel.html.erb
+++ b/app/views/abfragen/_ort_auswahl_panel.html.erb
@@ -5,10 +5,10 @@
       <div class="panel-body">
       
           <div class="form-group">
-            Ort: <%= text_field_tag "dort", "", class: "form-control" %>
+            Ort: <%= text_field_tag "dort", ort_name, class: "form-control" %>
           </div>
           <div class="form-group">
-            Radius: <%= text_field_tag "radius" , "500" %> km
+            Radius: <%= text_field_tag "radius" , radius %> km
           </div>
       </div>
     </div>
