--- a/app/views/abfragen/_zeit_auswahl_panel.html.erb
+++ b/app/views/abfragen/_zeit_auswahl_panel.html.erb
@@ -4,10 +4,10 @@
       </div>
       <div class="panel-body">
         <p>
-          Von: <%= text_field_tag "start_datum", "01.01.2012", class: "form-control" %> 
+          Von: <%= text_field_tag "start_datum", start, class: "form-control" %> 
         </p>
         <p>
-           Bis: <%= text_field_tag "end_datum", "31.12.2012", class: "form-control" %>
+           Bis: <%= text_field_tag "end_datum", ende, class: "form-control" %>
         </p>
       </div>
          
