--- a/app/views/transporte/_tabelle.html.erb
+++ b/app/views/transporte/_tabelle.html.erb
@@ -2,7 +2,7 @@
   <p>Keine Transporte gefunden.</p>
 <% else %>
 
-  <table class="table table-striped">
+  <table class="table table-striped transport-tabelle">
     <thead>
       <tr>
         <th></th>
