umstellung auf kg

--- a/app/views/transporte/_show_transport_grunddaten.html.erb
+++ b/app/views/transporte/_show_transport_grunddaten.html.erb
@@ -36,11 +36,11 @@
 
     <p>
       <strong>Netto-Menge:</strong>
-      <%= transport.menge_netto ? "#{transport.menge_netto} Tonnen" : "keine Angabe" %>
+      <%= transport.menge_netto ? "#{transport.menge_netto} kg" : "keine Angabe" %>
     </p>
     <p>
       <strong>Brutto-Menge:</strong>
-      <%= transport.menge_brutto ? "#{transport.menge_brutto} Tonnen" : "keine Angabe" %>
+      <%= transport.menge_brutto ? "#{transport.menge_brutto} kg" : "keine Angabe" %>
     </p>
     <p>
       <strong>Behälter-Typ:</strong>
