Mailer fuer Beobachtungen und README Deploy

--- a/app/views/schiffe/index.html.erb
+++ b/app/views/schiffe/index.html.erb
@@ -12,7 +12,7 @@
   allOrteMap("schiffe")
 </script>
 
-<% unless @reedereien %>
+<% unless @reedereien || @reedereien.empty? %>
   <p>Keine Schiffe gefunden.</p>
 <% else %>
   <% @reedereien.each do |r| %>
