link zur urantransport-seite

--- a/app/views/beobachtungen/danke.html.erb
+++ b/app/views/beobachtungen/danke.html.erb
@@ -8,6 +8,7 @@
           Vielen Dank für die Eingabe ihrer Beobachtung. 
   </div>
   <div class="panel-footer">
-        <%= link_to 'Neue Beobachtung', new_beobachtung_path, class: "btn btn-success" %>
+    <%= link_to 'Neue Beobachtung', new_beobachtung_path, class: "btn btn-success" %>
+    <%= link_to 'Zur Urantransport-Homepage', "http://urantransport.de", class: "btn btn-primary" %>
   </div>
 </div>
