fehlerkorrektur csv-einlesevorgang und tranpsport-anzeige, fixed #77

--- a/app/views/anlagen/show.html.erb
+++ b/app/views/anlagen/show.html.erb
@@ -27,6 +27,10 @@
     <% if @anlage.beschreibung? %>
       <p><%= @anlage.beschreibung %></p>
     <% end %>
+    
+    <% if @anlage.bild_urheber %>
+      <p>Bild von: <%= @anlage.bild_urheber %></p>
+    <% end %>
 
     <% if is_editor? %>
       <h3> Synonyme für die Anlage </h3>
