umstellung auf production umgebung #47

--- a/app/views/beobachtung_mailer/benachrichtigung.text.erb
+++ b/app/views/beobachtung_mailer/benachrichtigung.text.erb
@@ -6,6 +6,7 @@ Quelle: <%= @quelle %> <%= @beobachtung.email %>
 Ort: <%= @beobachtung.ort %>
 Zeit <%= @beobachtung.ankunft_zeit %>
 
-Beobachtung ansehen: <%= @url  %>
+Hier kannst du die Beobachtung ansehen, wenn du in der Atomtransport-Datenbank eingeloggt bist: 
+<%= @url  %>
  
 
