--- a/app/views/transportabschnitte/_form.html.erb
+++ b/app/views/transportabschnitte/_form.html.erb
@@ -113,7 +113,7 @@
     <div class="panel-body">
       <div class="form-group">
         <label>Verkehrsträger</label>
-        <%= f.select :verkehrstraeger, options_for_select(VERKEHRSTRAEGER_COMBOBOX, "unbekannt"), {}, class: "form-control" %>
+        <%= f.select :verkehrstraeger, options_for_select(VERKEHRSTRAEGER_COMBOBOX, (@transportabschnitt.verkehrstraeger ?  @transportabschnitt.verkehrstraeger : "unbekannt")), {}, class: "form-control" %>
       </div>
       <div class="form-group">
         <label>Transportfirma</label>
