--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -9,7 +9,7 @@
 <div class="container">
   <div class="row">
     <div class="col-sm-12">
-      <h2>Aktuelle Transporte</h2>
+      <h2>Letzte bekannte Transporte</h2>
       <%= render "aktuelle_transporte" %>
     </div>
 <!--    <div class="col-sm-6">
