tests kontrolliert, angepasst

--- a/app/views/abfragen/index.html.erb
+++ b/app/views/abfragen/index.html.erb
@@ -35,7 +35,7 @@
     <div class="col-sm-4">
       <%= render "auswahl_panel", typ: "Stoff", auswahl: @stoff_auswahl, checked: @checked_stoffe %>
       <div class="btn-group header-buttons">
-        <%= submit_tag "Passende Transporte anzeigen", class: "btn btn-primary" %>
+        <%= submit_tag "Passende Transporte suchen", class: "btn btn-primary" %>
       </div>
     </div>
     
