--- a/app/views/beobachtungen/karte.html.erb
+++ b/app/views/beobachtungen/karte.html.erb
@@ -4,7 +4,7 @@
   <%= hidden_field_tag :lon %>
   <%= hidden_field_tag :titel, "Bla" %>
 
-  <div id="map" style="height: 400px;"></div>
+  <div id="map" style="height: 400px; border = 1px solid green"></div>
           <!-- Javascript im Ordner app/assets/javascripts ablegen -->
   <script>
     geomap("ort");
