--- a/app/assets/javascripts/geomap.js.erb
+++ b/app/assets/javascripts/geomap.js.erb
@@ -1,5 +1,5 @@
           
-function geomap(typ, map_id='map'){
+function geomap(typ, map_id){
     var lat, lon, lat_name, lon_name;
     if (typ == "ort") {
       lat_name = 'lat'
