--- a/app/views/orte/_ort_eingabe.html.erb
+++ b/app/views/orte/_ort_eingabe.html.erb
@@ -26,6 +26,6 @@
         <div id="map" style="height: 300px;"></div>
         <!-- Javascript im Ordner app/assets/javascripts ablegen -->
         <script>
-          geomap("ort");
+          geomap("ort",'map');
         </script>
 </div>
