--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -41,6 +41,7 @@
         <% end %>
         
           <li><%= link_to "Transporte-Abfrage", abfragen_index_path %></li>
+          <li><%= link_to "Datenschutz und Impressum", "https://urantransport.de/impressum/" %></li>
       </ul>
       
       <ul class="nav navbar-nav navbar-right">
