--- a/app/views/transporte/_form.html.erb
+++ b/app/views/transporte/_form.html.erb
@@ -67,12 +67,12 @@
 
 
           <div class="form-group">
-            <%= f.label :menge_brutto, "Brutto-Menge (inklusive Behälter in Tonnen)" %><br>
+            <%= f.label :menge_brutto, "Brutto-Menge (inklusive Behälter in kg)" %><br>
             <%= f.text_field :menge_brutto, class:"form-control" %>
           </div>
           
           <div class="form-group">
-            <%= f.label :menge_netto, "Netto-Menge (ohne Behälter in Tonnen)" %><br>
+            <%= f.label :menge_netto, "Netto-Menge (ohne Behälter in kg)" %><br>
             <%= f.text_field :menge_netto, class:"form-control" %>
           </div>
          
