--- a/app/views/umschlaege/_form.html.erb
+++ b/app/views/umschlaege/_form.html.erb
@@ -32,7 +32,7 @@
             
               <div class="form-group">
                   Firma (Umschlag): 
-                  <%= collection_select(:umschlag, :firma_id, Firma.all, :id, :name, class: "form-control") %>
+                  <%= collection_select(:umschlag, :firma_id, Firma.all.order(:name), :id, :name, class: "form-control") %>
               </div>
             
               <div class="form-group">
